wp-content/themes/dlgthm/css/main.css
/* ... */
/******************************************************************************
 * Settings
 *****************************************************************************/

/******************************************************************************
 * Sitewide
 *****************************************************************************/

::-moz-selection {
  text-shadow: none;
  background: #b3d4fc;
}

::selection {
  color: #fff;
  text-shadow: none;
  background: #c5c19d;
}

hr {
  display: block;
  height: 1px;
  padding: 0;
  margin: 1em 0;
  border: 0;
  border-top: 1px solid #ccc;
}

img {
  vertical-align: middle;
}

fieldset {
  padding: 0;
  margin: 0;
  border: 0;
}

textarea {
  resize: vertical;
}

.chromeframe {
  padding: 0.2em 0;
  margin: 0.2em 0;
  color: #000;
  background: #ccc;
}

/******************************************************************************
 * Basic Styles
 *****************************************************************************/

html {
  height: 100%;
}

body {
  height: 100%;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: #333333;
  background: #333;
}

h1 {
  margin: 15px 0;
  font-size: 40px;
  line-height: 40px;
  color: #6d6e71;
}

h2 {
  font-size: 36px;
  line-height: 36px;
  color: #6d6e71;
}

h3 {
  font-size: 32px;
  line-height: 36px;
  color: #6d6e71;
}

h4 {
  font-size: 28px;
  line-height: 36px;
  color: #6d6e71;
}

p {
  line-height: 22px;
}

ul {
  padding: 15px;
  padding-left: 15px;
  margin: 0;
  list-style-type: disc;
}

ul li {
  padding: 5px;
  margin: 0;
  margin-left: 15px;
}

a {
  color: #518fcc;
  text-decoration: none;
}

a:hover {
  color: #2f69a1;
}

a:active {
  color: #518fcc;
}

a:visited {
  color: #b42d38;
}

/******************************************************************************
 * Scaffolding
 *****************************************************************************/

#body-wrap {
  /* background-image: linear-gradient(@grey 25%, @greyy 75%);*/

  /* background-repeat: no-repeat;*/

  height: 100%;
}

.block-center {
  width: 960px;
  height: 500px;
  padding-top: 15px;
  margin: 0 auto;
}

/******************************************************************************
   * Pages
   *****************************************************************************/

.content-wrap {
  width: 960px;
  margin: 0 auto;
  overflow: hidden;
}

.content-scrollspy {
  top: 0;
  z-index: 98;
  float: left;
  width: 199px;
  background-color: #fff;
  border-right: 1px #efefef solid;
}

.content-scrollspy.stuck {
  top: 95px;
  float: none;
}

.content-scrollspy ul {
  padding: 0;
  margin: 0;
}

.content-scrollspy li {
  padding: 0;
  margin: 0;
  border-bottom: 1px solid #efefef;
}

.content-scrollspy a {
  display: block;
  line-height: 50px;
  color: #6d6e71;
  text-align: center;
  background-color: transparent;
}

.content-scrollspy a:hover {
  background-color: #fff;
  -webkit-box-shadow: inset 0 0px 10px 0px rgba(0, 0, 0, 0.1);
          box-shadow: inset 0 0px 10px 0px rgba(0, 0, 0, 0.1);
}

.content-scrollspy li.active > a {
  color: #007489;
  border-right: 5px #007489 solid;
}

.content-body {
  float: right;
  width: 680px;
  padding: 40px;
  background-color: #fff;
}

/******************************************************************************
 * Header
 *****************************************************************************/

.header-wrap {
  position: fixed;
  z-index: 101;
  width: 100%;
}

.home > .header-wrap {
  position: static;
}

.header-inner {
  width: 100%;
  background-color: #518fcc;
  background-image: linear-gradient(#518fcc 80%, #3576b5 100%);
  background-repeat: no-repeat;
}

.menu-logo {
  position: absolute;
  top: 0;
  z-index: 100;
  width: 109px;
}

/******************************************************************************
 * Banner
 *****************************************************************************/

#banner {
  width: 960px;
  height: 100px;
  padding-top: 300px;
  margin: 0 auto;
  background-image: url(http://fc00.deviantart.net/fs71/i/2013/219/c/9/linked_to_our_world_by_barbaraofbruno-d6h01q9.jpg);
}

#banner > h1 {
  padding: 40px;
  margin: 0;
  margin-top: 2px;
  margin-left: 160px;
  font-size: 70px;
  font-weight: bold;
  line-height: 70px;
  color: #fff;
}

/******************************************************************************
 * Front Page
 *****************************************************************************/

#purpose-strategy-execution-wrap {
  background-color: #f4c017;
}

#purpose-strategy-execution h1 {
  font-size: 100px;
  font-weight: bold;
  line-height: 400px;
  color: #572700;
  text-align: center;
}

/******************************************************************************
 * Settings
 *****************************************************************************/

/******************************************************************************
 * Navigation
 *****************************************************************************/

.menu-wrap {
  width: 960px;
  margin: 0 auto;
}

.menu {
  float: right;
}

.menu > ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.menu > ul:after {
  display: block;
  height: 0;
  overflow: hidden;
  clear: both;
  content: " ";
}

.menu > ul > li {
  position: relative;
  float: left;
  padding: 0;
  margin: 0;
}

.menu > ul > li.current_page_item > a,
.menu > ul > li.current_page_parent > a {
  padding-bottom: 0;
  font-weight: bold;
  color: #6d6e71;
  text-shadow: 0px 1px 0px #fff;
  background-color: #e6e7e8;
}

.menu > ul > li.current_page_item:hover > a,
.menu > ul > li.current_page_parent:hover > a {
  padding-left: 20px;
  border-left: none!important;
}
/* ... */

